# ml-app-wind-draft

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RESET_PREFECT_DB.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  python-app.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
data/01_raw/: df_inference.parquet  df_train.parquet
data/02_models/: best_model.pkl  catboost_model.cbm  x_scaler.pkl
data/sqlite/: app.db-shm  app.db-wal
docker_files/: Dockerfile  Dockerfile.data  Dockerfile.ml  Dockerfile.mlflow  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml.optional-deps
docs/: DASH_UI_LESSON_PLAN.md  LESSON_01_PROJECT_SETUP.md  LESSON_02_CODE_QUALITY.md  LESSON_04_KEDRO_PIPELINES.md  LESSON_04_MLFLOW_TUTORIAL.md  LESSON_07_DOCKER_CONTAINERIZATION.md  LESSON_09_CONTINUOUS_DEPLOYMENT.md  LESSON_10_PREFECT.md  LESSON_CI_GITHUB_ACTIONS.md  LESSON_CODE_QUALITY.md  LESSON_CONTINUOUS_DEPLOYMENT.md  LESSON_DATA_MANAGEMENT.md  LESSON_DOCKER_CONTAINERIZATION.md  LESSON_KEDRO_PIPELINES.md  LESSON_PREFECT.md  LESSON_PREFECT_IMPLEMENTATION.md  LESSON_PREFECT_ORCHESTRATION.md  LESSON_PYTEST_TUTORIAL.md  Lessons_Sequence.md
docs/source/: conf.py  index.rst
docs/updated_sessions/: Session_2 - Directory and UV Setup.md  Session_2_DIRECTORY_AND_UV_SETUP.md  Session_7 - ML Pipelines  and Kedro Intro.md
entrypoint/: __init__.py  app_data_manager.py  app_stream_data.py  app_ui.py  data_manager_app.py  inference.py  inference_on_stream_data.py  inference_real_time.py  training.py  training_real_time.py
entrypoint/prefect/: inference_flow.py  training_flow.py
mlflow/mlruns/764578685655496101/: meta.yaml
mlflow/mlruns/764578685655496101/01b111d7620e4182abf0cd6363f5fc7a/: meta.yaml
mlflow/mlruns/764578685655496101/026dd3d545ec4ed5a57b38dde6413dcf/: meta.yaml
mlflow/mlruns/764578685655496101/185b2721ae0e4767b0fea639cfef3eaf/: meta.yaml
mlflow/mlruns/764578685655496101/1925e3d22951407f9ea6e1c85dfdfeb6/: meta.yaml
mlflow/mlruns/764578685655496101/25319ddc856d41ac99eddd88fc493543/: meta.yaml
mlflow/mlruns/764578685655496101/35744b234f644812a466e5163d5b3ece/: meta.yaml
mlflow/mlruns/764578685655496101/3cdc78a8b1214a9a96964fb3d90ba1d0/: meta.yaml
mlflow/mlruns/764578685655496101/473ed03fc1674a749f86796a3aa1c8c4/: meta.yaml
notebooks/: 01 - EDA.ipynb  02 - Baseline model.ipynb  utils.py
notebooks/catboost_info/: catboost_training.json  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/models/: catboost_model.cbm  preprocessing.py  x_scaler.joblib
src/app_data_manager/: app.py  data_manager.py
src/app_ui/: QUICKSTART.md  README.md  app.py  requirements.txt  utils.py
src/app_ui/assets/: __init__.py
src/app_ui/components/: __init__.py  sidebar.py
src/app_ui/pages/: __init__.py  architecture.py  home.py  ml_pipelines.py  model_tracking.py
src/common/: __init__.py  metrics.py  mlflow_utils.py
src/ml_app_wind_draft/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/ml_app_wind_draft/pipelines/: utils.py
tests/: conftest.py  test_pipeline_functions.py
(+794 files in other folders)
